--- a/src/pages/imou/index.astro
+++ b/src/pages/imou/index.astro
@@ -1,43 +1,43 @@
 ---
+import { getCollection } from "astro:content";
 import MainLayout from "@/layouts/MainLayout.astro";
-import PrimaryCTA from "@components/ui/buttons/PrimaryCTA.astro";
+import PrimaryCTA from "@/components/ui/buttons/PrimaryCTA.astro";
 
-interface Props {
+interface Card {
+  id: number
   title: string;
-  subTitle?: string;
-  description?: string;
-  benefits?: Array<string>;
+  desc: string;
+  img: string;
+  alt: string;
+  author: string;
+  reviewBody:string;
+  ratingValue:number;
+  slug: string;
+  features?: string[];
+  publishedTime: string;
 }
 
+const content = await getCollection("lovosis");
+
+const cards: Card[] = content.map((item:any) => ({
+  id: item.data.id,
+  title: item.data.title,
+  desc: item.data.desc,
+  img: item.data.img.src,
+  alt: item.data.alt,
+  author: item.data.author,
+  reviewBody: item.data.reviewBody,
+  ratingValue: item.data.ratingValue,
+  slug: item.slug,
+  features: item.data.features,
+  publishedTime: item.data.publishedTime
+}));
+
+
 const title: string = "Buy Imou CCTV Cameras in Bulk | Wholesale Distributor for Security Systems";
-const description: string ="Looking for affordable and high-quality Imou cameras? We are a trusted wholesale distributor of Imou CCTV cameras, offering smart security solutions at unbeatable prices. Explore our bulk pricing options for residential, commercial, and industrial needs. Contact us for a quote today!"
+const description: string ="Looking for affordable and high-quality Imou cameras? We are a trusted wholesale distributor of Imou CCTV cameras, offering smart security solutions at unbeatable prices. Explore our bulk pricing options for residential, commercial, and industrial needs. Contact us for a quote today!";
+const structuredData = {
 
-
-const cards = [
-  {
-    title: "NVR",
-    link: "/public/pictures/nvr-imou.webp",
-    bgImage: "url('pictures/nvr-imou.webp')", 
-  },
-  {
-    title: "Home Security",
-    link: "/public/pictures/home-imou.webp",
-    bgImage: "url('pictures/home-imou.webp')",
-  },
-  {
-    title: "Cameras",
-    link: "/public/pictures/ip-imou.webp",
-    bgImage: "url('pictures/ip-imou.webp')", 
-  },
-  {
-    title: "Accessories",
-    link: "/public/pictures/acc-imou.webp",
-    bgImage: "url('pictures/acc-imou.webp')", 
-  },
-];
-
-const structuredData={
-  
   "@context": "https://schema.org",
   "@type": "Organization",
   "name": "Lovosis Technology L.L.C",
@@ -68,28 +68,35 @@ const structuredData={
     "url": "https://www.imou.com",
     "logo": "https://lovosis.com/pictures/Brand%20Logo/Imou.png"
   },
-  "product": {
-    "@type": "Product",
-    "name": "Imou CCTV Camera",
-    "image": "https://lovosis.com/pictures/imou.png",
-    "description": {description},
-    "brand": {
-      "@type": "Brand",
-      "name": "Imou"
-    },
-    "offers": {
-      "@type": "Offer",
-      "url": "https://lovosis.com/imou",
-      "priceCurrency": "AED",
-      "price": "250",
-      "eligibleRegion": {
-        "@type": "Place",
-        "name": "UAE"
-      },
-      "priceValidUntil": "2024-12-31"
+  
+      "hasOfferCatalog": {
+      "@type": "ItemList",
+      "itemListElement": cards.map((card) => {
+        return {
+          "@type": "ListItem",
+          
+          "position": card.id,
+          "item": {
+            "@type": "Product",
+            "name": card.title,
+            "image": `${Astro.url.origin}/${card.img}`,
+          
+            "description": card.desc,
+            "brand": {
+              "@type": "Brand",
+              "name": "UNV"
+            },
+            "url": `${Astro.url.origin}/uniview/${card.slug}`,
+            "aggregateRating": {
+              "@type": "AggregateRating",
+              "ratingValue": "4.9",
+              "reviewCount": "50"
+            }
+          }
+        };
+      })
     }
   }
-}
 
 ---
 
@@ -175,33 +182,43 @@ const structuredData={
 </style>
 
 
-<MainLayout
-  title={title} sd={structuredData} description ={description}
- 
->
-
-
-
+<MainLayout title={title} sd={structuredData} description ={description}>
 <section class="mx-auto max-w-[85rem] px-4 py-10 sm:px-6 lg:px-8 lg:py-14 2xl:max-w-full">
 
- 
-    <div class="grid lg:grid-cols-2 justify-items-center gap-5">
+  <div class="flex-item-center grid justify-center gap-5 lg:grid-cols-2 mt-16">
     <div class="flex flex-col justify-center">
-        <img src="/pictures/Brand Profile/7.jpg" alt="billboard image" class="rounded-lg" />
+      <img
+        src="/pictures/Brand Profile/7.jpg"
+        alt="billboard image"
+        class="rounded-lg"
+        width="600"
+        height="500"
+        loading="lazy"
+      />
     </div>
-
-    <div class="order-1 lg:order-2 fadeInRight">
-        <h2 class="text-3xl font-semibold text-gray-900 dark:text-gray-200">IMOU wholesale Distributor</h2>
-        <p class="text-md mt-4 dark:text-gray-300">Welcome to the premier destination for IMOU security solutions in Dubai. As an authorized distributor, we are committed to delivering advanced surveillance technology tailored to the unique needs of our customers. Experience unparalleled safety with our wide range of IMOU products designed for both home and business use.
-
-            Our cutting-edge IMOU products are engineered to blend seamlessly into your Dubai lifestyle, providing robust protection with features like advanced motion detection, night vision, and real-time alerts right to your mobile device. As the leading Authorized IMOU Distributor in Dubai, we offer an extensive selection of IMOU’s latest releases, including the popular Bullet, Dome, and Ranger series, all designed to keep you connected and secure. Whether you’re safeguarding your residence or monitoring your business, IMOU’s reliable and user-friendly cameras are the smart choice for those who demand the best in security. Shop now and join the IMOU family, ensuring peace of mind with technology that watches over you.
-        </p>
-        <div class="mt-8 grid w-full sm:inline-flex">
-            <PrimaryCTA title="Contact Us" url=https://imou-dubai.com/contact-us/ />
-        </div>
-        
+    <div class="order-1 mt-4 items-start lg:order-2">
+      <h1
+        class="text-2xl font-bold text-neutral-800 dark:text-gray-200 md:text-4xl"
+      >
+      IMOU wholesale Distributor
+      </h1>
+      <p class="mt-2 line-clamp-8 text-base/relaxed text-gray-500 dark:text-gray-400">
+        Welcome to the premier destination for IMOU security solutions in Dubai. 
+        As an authorized distributor, we are committed to delivering advanced surveillance technology tailored to the unique needs of our customers. 
+        Experience unparalleled safety with our wide range of IMOU products designed for both home and business use.
+        Our cutting-edge IMOU products are engineered to blend seamlessly into your Dubai lifestyle, 
+        providing robust protection with features like advanced motion detection, night vision, and real-time alerts right to your mobile device. 
+        As the leading Authorized IMOU Distributor in Dubai, 
+        we offer an extensive selection of IMOU’s latest releases, including the popular Bullet, Dome, and Ranger series, all designed to keep you connected and secure. 
+        Whether you’re safeguarding your residence or monitoring your business, IMOU’s reliable and user-friendly cameras are the smart choice for those who demand the best in security.
+        Shop now and join the IMOU family, ensuring peace of mind with technology that watches over you. 
+      </p>
+      <div class="mt-4 grid w-full sm:inline-flex">
+      <PrimaryCTA title="Contact Us" url="https://lovosis.com/contact/" />
+      </div>
     </div>
   </div>
+  
  
 
 
@@ -215,14 +232,24 @@ const structuredData={
 
   <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8 lg:py-8">
     <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6">
-      {cards.map((card, index) => (
-        <div class="bg-cover bg-center h-64 rounded-xl flex items-center justify-center"
-             style={`background-image: ${card.bgImage};`}>
-          <a href={card.link} class="text-white text-base font-bold bg-black bg-opacity-50 p-4 rounded-xl">
-            {card.title}
-          </a>
-        </div>
-      ))}
+      {
+        cards.map((card) => (
+          <div class="transform overflow-hidden rounded-lg bg-white shadow-lg transition-all duration-300 ease-in-out hover:-translate-y-2 hover:shadow-xl">
+            <img
+              src={card.img}
+              alt={card.alt}
+              class="product-image h-56 w-full object-cover"
+            />
+            <div class="flex flex-col items-center p-6">
+              <h3 class="text-xl font-semibold">{card.title}</h3>
+              <p class="mb-4 mt-3 text-gray-600">{card.desc}</p>
+              <a href={`/uniview/${card.slug}`} class="read-more-btn">
+                Read More
+              </a>
+            </div>
+          </div>
+        ))
+      }
     </div>
   </div>
 
