--- a/src/pages/uniview/index.astro
+++ b/src/pages/uniview/index.astro
@@ -87,6 +87,7 @@ const structuredData = {
       ]
     },
     {
+      "hasOfferCatalog": {
       "@type": "ItemList",
       "itemListElement": cards.map((card) => {
         return {
@@ -113,6 +114,7 @@ const structuredData = {
         };
       })
     }
+  }
   ]
 };
 
@@ -138,22 +140,19 @@ const structuredData = {
           <h1
             class="text-2xl font-bold text-neutral-800 dark:text-gray-200 md:text-4xl"
           >
-            UNV Cameras & CCTV Solutions in Dubai, UAE | Lovosis Technology L.L.C
+          UNV Cameras & CCTV Systems Supplier in Dubai, UAE | Lovosis Technology L.L.C
           </h1>
           <p class="mt-2 line-clamp-8 text-base/relaxed text-gray-500 dark:text-gray-400">
-            Welcome to Lovosis Technology L.L.C, the authorized <strong
-              >UNV distributor</strong
-            > in the UAE and a leading exporter of cutting-edge security solutions
-            across the Middle East. We specialize in providing high-quality <strong
-              >UNV cameras, UNV CCTV systems</strong
-            >, and advanced security technologies to meet the growing demand for
-            reliable surveillance in residential, commercial, and industrial
-            sectors<br />At <strong>Lovosis Technology L.L.C</strong>, we
-            understand the importance of budget-friendly security solutions. Our
-            <strong>UNV CCTV camera</strong> price is highly competitive, making it
-            easier for businesses in Dubai and across the Middle East to access top-tier
-            surveillance technology. Contact us today for a customized quote tailored
-            to your needs.
+            We appreciate you visiting <strong>Lovosis Technology L.L.C</strong>.We are the authorized <strong>UNV distributor in UAE </strong>
+            and one of the foremost exporters of advanced security systems in the Middle East.
+             We supply <strong>UNV cameras</strong>, UNV CCTV systems and other security features to 
+             satisfy the increasing need for dependable surveillance in residential, 
+             commercial and industrial areas.At Lovosis Technology L.L.C, we recognize that security solutions have to be economical. 
+            Surveillance and security is very sensitive and important and so our 
+            <strong>UNV CCTV camera price</strong> allows businesses in Dubai and the rest of the 
+            Middle East to afford the best surveillance technology. Kindly 
+            contact us for further assistance, we are hear to help.
+            
           </p>
           <div class="mt-8 grid w-full sm:inline-flex">
             <PrimaryCTA title="Contact Us" url="https://lovosis.com/contact/" />
@@ -322,15 +321,4 @@ const structuredData = {
     }
   });
 </script>
-<script>
-  import gsap from "gsap";
- 
-document.addEventListener("DOMContentLoaded", () => {
-  gsap.to(".product-image", {
-    
-      y:10,
-      x:50,
-      stagger: 0.1
-    });
-  });
-</script>
+
