--- a/src/pages/imou/index.astro
+++ b/src/pages/imou/index.astro
@@ -83,10 +83,11 @@ const structuredData = {
               "@type": "Brand",
               "name": "UNV"
             },
-            "url": `${Astro.url.origin}/uniview/${card.slug}`,
+            "url": `${Astro.url.origin}/imou/${card.slug}`,
             "aggregateRating": {
               "@type": "AggregateRating",
               "ratingValue": "4.9",
+              "reviewCount": "45"
               
             }
           }
