--- a/src/pages/imou/index.astro
+++ b/src/pages/imou/index.astro
@@ -234,7 +234,7 @@ const structuredData = {
             <div class="flex flex-col items-center p-6">
               <h3 class="text-xl font-semibold">{card.title}</h3>
               <p class="mb-4 mt-3 text-gray-600">{card.desc}</p>
-              <a href={`/uniview/${card.slug}`} class="read-more-btn">
+              <a href={`/imou/${card.slug}`} class="read-more-btn">
                 Read More
               </a>
             </div>
