--- a/src/pages/alhua/index.astro
+++ b/src/pages/alhua/index.astro
@@ -33,7 +33,7 @@ const cards: Card[] = content.map((item) => ({
 }));
 
 const pageTitle: string =
-  "Dahua distributor in Dubai | Lovosis Technology L.L.C";
+  "Dahua distributor in Dubai";
 const description =
   "Buy top-quality Dahua security cameras, DVRs, NVRs & IP Cameras from Dubai's leading dealer. Expert installation, advanced tech & professional support for homes & businesses. Secure your property today";
 
@@ -143,7 +143,7 @@ const structuredData = {
           Dahua distributor in Dubai | Lovosis Technology L.L.C
           </h1>
           <p class="mt-2 line-clamp-8 text-base/relaxed text-gray-500 dark:text-gray-400">
-            <strong>Dahua Technology</strong> stands out as a top global provider of video surveillance solutions.
+            <strong>Dahua distributor in Dubai</strong> stands out as a top global provider of video surveillance solutions.
              Their cameras are recognized for delivering high-quality images, cutting-edge technologies,
             and strong security features. If you're aiming to craft engaging content on 
             why <strong>Dahua cameras</strong> are a great option, here’s an outline 
